[package]
name = "rsetlin"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsetlin"
# crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
anyhow = "1.0.75"
parquet = "47.0.0"
pyo3 = { version = "0.17.3", features = ["extension-module"], optional = true}
rand = "0.8.5"
rayon = "1.8.0"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = "1.0.188"
serde_json = "1.0.107"
tokenizers = { version = "0.14.0", features = ["http"] }

[[bin]]
name = "download_tokenizer"

[[example]]
name = "sst2-training"
