[package]
name = "rsetlin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsetlin"
crate-type = ["cdylib"]

[[bin]]
name = "download_tokenizer"

[features]
default = ["python"]
python = []

[dependencies]
anyhow = "1.0.75"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rand = "0.8.5"
tokenizers = { version = "0.14.0", features = ["http"] }
