[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "rsetlin"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "optuna"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ipython"
]

[tool.maturin]
python-source = "python"
module-name = "rsetlin"
features = ["python"]
